kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cloud-platform-application

spec:
  replicas: 1

  selector:
    matchLabels:
      application: cloud-platform-application

  template:
    metadata:
      labels:
        application: cloud-platform-application

    spec:
      containers:
        - name: cloud-platform-application
          image: cloud-platform-application:local
          ports:
            - containerPort: 8080
