kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloud-platform-application

spec:
  selector:
    application: cloud-platform-application

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
