kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloud-platform-application

spec:
  rules:
    - host: cloud-platform.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-platform-application
                port:
                  number: 80
